# apex_shared protocols/tcp вҖ” TcpBinaryProtocol
#
# INTERFACE library: н—ӨлҚ”л§Ң м ңкіө.
# WireHeader/FrameCodecлҠ” apex_coreлЎң ліөмӣҗлҗЁ. TcpBinaryProtocolл§Ң sharedм—җ мһ”лҘҳ.

add_library(apex_protocols_tcp INTERFACE)
add_library(apex::shared::protocols::tcp ALIAS apex_protocols_tcp)

target_include_directories(apex_protocols_tcp
    INTERFACE
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
        $<INSTALL_INTERFACE:include>
)

find_package(OpenSSL QUIET)

target_link_libraries(apex_protocols_tcp
    INTERFACE
        apex::core
        $<$<TARGET_EXISTS:OpenSSL::SSL>:OpenSSL::SSL>
        $<$<TARGET_EXISTS:OpenSSL::Crypto>:OpenSSL::Crypto>
)
